bux wiht transaktionen fixed

--- a/Programm/templates/add_buy.html
+++ b/Programm/templates/add_buy.html
@@ -34,21 +34,21 @@
             <p>Scanne den speziellen Barcode "Brake", um den Kauf abzuschließen.</p>
             <form id="buyForm" action="/add_buy" method="post">
                 <label for="TN_Barcode" class="participantBarcodeLabel">Teilnehmerbarcode:</label>
-                <input id="TN_Barcode" name="TN_Barcode" class="participantBarcodeInput" autofocus>
+                <input id="TN_Barcode" name="TN_Barcode" class="participantBarcodeInput" autofocus autocomplete="off" inputmode="none" autocorrect="off" spellcheck="false">
                 <label for="P_Barcode1" class="productBarcodeLabel" style="display:none;">Produktbarcode 1:</label>
-                <input id="P_Barcode1" name="P_Barcode1" class="productBarcodeInput" style="display:none;">
+                <input id="P_Barcode1" name="P_Barcode1" class="productBarcodeInput" style="display:none;" autocomplete="off" inputmode="none" autocorrect="off" spellcheck="false">
                 <label for="P_Barcode2" class="productBarcodeLabel" style="display:none;">Produktbarcode 2:</label>
-                <input id="P_Barcode2" name="P_Barcode2" class="productBarcodeInput" style="display:none;">
+                <input id="P_Barcode2" name="P_Barcode2" class="productBarcodeInput" style="display:none;" autocomplete="off" inputmode="none" autocorrect="off" spellcheck="false">
                 <label for="P_Barcode3" class="productBarcodeLabel" style="display:none;">Produktbarcode 3:</label>
-                <input id="P_Barcode3" name="P_Barcode3" class="productBarcodeInput" style="display:none;">
+                <input id="P_Barcode3" name="P_Barcode3" class="productBarcodeInput" style="display:none;" autocomplete="off" inputmode="none" autocorrect="off" spellcheck="false">
                 <label for="P_Barcode4" class="productBarcodeLabel" style="display:none;">Produktbarcode 4:</label>
-                <input id="P_Barcode4" name="P_Barcode4" class="productBarcodeInput" style="display:none;">
+                <input id="P_Barcode4" name="P_Barcode4" class="productBarcodeInput" style="display:none;" autocomplete="off" inputmode="none" autocorrect="off" spellcheck="false">
                 <label for="P_Barcode5" class="productBarcodeLabel" style="display:none;">Produktbarcode 5:</label>
-                <input id="P_Barcode5" name="P_Barcode5" class="productBarcodeInput" style="display:none;">
+                <input id="P_Barcode5" name="P_Barcode5" class="productBarcodeInput" style="display:none;" autocomplete="off" inputmode="none" autocorrect="off" spellcheck="false">
                 <label for="P_Barcode6" class="productBarcodeLabel" style="display:none;">Produktbarcode 6:</label>
-                <input id="P_Barcode6" name="P_Barcode6" class="productBarcodeInput" style="display:none;">
+                <input id="P_Barcode6" name="P_Barcode6" class="productBarcodeInput" style="display:none;" autocomplete="off" inputmode="none" autocorrect="off" spellcheck="false">
                 <label for="P_Barcode7" class="productBarcodeLabel" style="display:none;">Produktbarcode 7:</label>
-                <input id="P_Barcode7" name="P_Barcode7" class="productBarcodeInput" style="display:none;">
+                <input id="P_Barcode7" name="P_Barcode7" class="productBarcodeInput" style="display:none;" autocomplete="off" inputmode="none" autocorrect="off" spellcheck="false">
                 <input type="submit" value="Kauf hinzufügen">
             </form>
         </div>
