--- a/Programm/templates/A_TN.html
+++ b/Programm/templates/A_TN.html
@@ -27,3 +27,5 @@
         <h2>Checkout</h2>
         <a href="/checkout_tn" class="admin-link">Teilnehmer auschecken</a>
     </div>
+</body>
+</html>
