--- a/Programm/templates/TN-Abfrage.html
+++ b/Programm/templates/TN-Abfrage.html
@@ -1,23 +1,27 @@
+<!--Filename = TN-Abfrage.html-->
+
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Checkout System</title>
-    <link rel="stylesheet" type="text/css" href="/static/styles.css">
-  </head>
-  <body>
-    <header>
-      <h1 class="topic">Teilnehmer auschecken</h1>
-      <nav>
-          <ul>
-              <li><a href="/">Startseite</a></li>
-              <li><a href="/add_buy">Kauf hinzufügen</a></li>
-              <li><a href="/watch">Auswertung</a></li>
-              <li><a href="/admin">Einstellungen</a></li>
-              <li><a href="#" onclick="history.back();">Zurück</a></li>
-          </ul>
-      </nav>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Checkout System</title>
+  <link rel="stylesheet" type="text/css" href="/static/styles.css">
+</head>
+
+<body>
+  <header>
+    <h1 class="topic">Teilnehmer auschecken</h1>
+    <nav>
+      <ul>
+        <li><a href="/">Startseite</a></li>
+        <li><a href="/add_buy">Kauf hinzufügen</a></li>
+        <li><a href="/watch">Auswertung</a></li>
+        <li><a href="/admin">Einstellungen</a></li>
+        <li><a href="#" onclick="history.back();">Zurück</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <div class="">
@@ -32,5 +36,6 @@
       </form>
     </div>
   </main>
-  </body>
+</body>
+
 </html>
