--- a/Programm/templates/add_fund.html
+++ b/Programm/templates/add_fund.html
@@ -1,11 +1,15 @@
+<!--Filename = A_Produkte.html-->
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Einzahlung hinzufügen</title>
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
+
 <body>
     <header>
         <h1 class="topic">Guthaben hinzufügen</h1>
@@ -29,9 +33,10 @@
                 </select><br>
                 <label for="amount">Betrag:</label>
                 <input type="number" id="amount" name="amount" required step="0.01"><br>
-                <button class="bt"type="submit">Hinzufügen</button>
+                <button class="bt" type="submit">Hinzufügen</button>
             </form>
         </div>
     </main>
 </body>
+
 </html>
