--- a/Programm/templates/admin.html
+++ b/Programm/templates/admin.html
@@ -1,11 +1,15 @@
+<!--Filename = admin.html-->
+
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
+
 <body>
     <header>
         <h1 class="topic">Admin Panel</h1>
@@ -27,6 +31,7 @@
             <a href="/dblogin" class="admin-link">Datenbankverwaltung</a>
         </div>
     </div>
-    
+
 </body>
+
 </html>
