--- a/Programm/templates/delete_database.html
+++ b/Programm/templates/delete_database.html
@@ -1,26 +1,29 @@
+<!--Filename = A_Produkte.html-->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datenbank löschen</title>
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
+
 <body>
     <header>
         <h1 class="topic">Datenbank löschen <h1>
-      <nav>
-          <ul>
-              <li><a href="/open_barcode">Barcode-Transaktionen</a></li>
-              <li><a href="/add_user">Nutzer hinzufügen</a></li>
-              <li><a href="/watch">Auswertung</a></li>
-              <li><a href="#" onclick="history.back();">Zurück</a><li>
-          </ul>
-      </nav>
+                <nav>
+                    <ul>
+                        <li><a href="/open_barcode">Barcode-Transaktionen</a></li>
+                        <li><a href="/add_user">Nutzer hinzufügen</a></li>
+                        <li><a href="/watch">Auswertung</a></li>
+                        <li><a href="#" onclick="history.back();">Zurück</a>
+                        <li>
+                    </ul>
+                </nav>
     </header>
     <div>
         <h1>Datenbank auswählen</h1>
-        
         <form method="post">
             <label for="password">Passwort:</label>
             <input type="password" id="password" name="password" required><br>
@@ -28,4 +31,5 @@
         </form>
     </div>
 </body>
+
 </html>
