--- a/Programm/templates/edit_user.html
+++ b/Programm/templates/edit_user.html
@@ -1,5 +1,8 @@
+<!--Filename = edit_user.html-->
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +14,7 @@
         }
     </script>
 </head>
+
 <body>
     <header>
         <h1 class="topic">Benutzer bearbeiten</h1>
@@ -38,9 +42,11 @@
                 <input type="text" id="new_barcode" name="new_barcode" placeholder="Neuer Teilnehmerbarcode"><br>
                 <button class="bt" type="submit" name="action" value="update">Aktualisiere Name</button>
                 <button class="bt" type="submit" name="action" value="update_b">Aktualisiere Barcode</button>
-                <button class="bt" type="submit" name="action" value="delete" onclick="return confirmDelete();">Benutzer löschen</button>
+                <button class="bt" type="submit" name="action" value="delete" onclick="return confirmDelete();">Benutzer
+                    löschen</button>
             </form>
         </div>
     </main>
 </body>
+
 </html>
