--- a/Programm/templates/A_DB.html
+++ b/Programm/templates/A_DB.html
@@ -1,11 +1,14 @@
+<!--Filename = A_DB.html-->
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
+
 <body>
     <header>
         <h1 class="topic">Admin Panel</h1>
@@ -25,4 +28,5 @@
         <a href="/delete_database" class="admin-link">Datenbank löschen</a>
     </div>
 </body>
+
 </html>
