--- a/Programm/templates/A_Statistik.html
+++ b/Programm/templates/A_Statistik.html
@@ -1,11 +1,15 @@
+<!--Filename = A_Statistik.html-->
+
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
+
 <body>
     <header>
         <h1 class="topic">Admin Panel</h1>
