--- a/Programm/templates/buy_check.html
+++ b/Programm/templates/buy_check.html
@@ -1,11 +1,15 @@
+<!--Filename = buy_check.html-->
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kauf Übersicht</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
+
 <body>
     <header>
         <h1 class="topic">Kauf Übersicht</h1>
@@ -31,4 +35,5 @@
         </div>
     </main>
 </body>
+
 </html>
