--- a/Programm/templates/A_Statistik.html
+++ b/Programm/templates/A_Statistik.html
@@ -28,3 +28,6 @@
         <a href="/geld_aufteilen" class="admin-link">Geldaufteilung</a>
         <a href="/watch" class="admin-link">Übersicht</a>
     </div>
+</body>
+
+</html>
