--- a/Programm/templates/A_Produkte.html
+++ b/Programm/templates/A_Produkte.html
@@ -27,3 +27,6 @@
         <a href="/add_product" class="admin-link">Produkt hinzufügen</a>
         <a href="/edit_product_prices" class="admin-link">Produkt bearbeiten</a>
     </div>
+</body>
+
+</html>
