ausleih function eingebaut

--- a/Programm/templates/admin.html
+++ b/Programm/templates/admin.html
@@ -27,6 +27,7 @@
             <a href="/settings" class="admin-link">Einstellungen</a>
             <a href="/teilnehmer" class="admin-link">Teilnehmer</a>
             <a href="/produkte" class="admin-link">Produkte</a>
+            <a href="/items" class="admin-link">Spielzeug</a>
             <a href="/statistik" class="admin-link">Statistik</a>
             <a href="/dblogin" class="admin-link">Datenbankverwaltung</a>
         </div>
