--- a/Programm/templates/index.html
+++ b/Programm/templates/index.html
@@ -96,6 +96,7 @@
         <ul>
             <li><a href="/add_buy">Kauf</a></li>
             <li><a href="/borrow">Ausleihen</a></li>
+            <li><a href="/return_spielzeug">Rückgabe</a></li>
             <li><a href="/admin">Einstellungen</a></li>
         </ul>
     </nav>
