Submit barcode to Admin

--- a/Programm/templates/add_buy.html
+++ b/Programm/templates/add_buy.html
@@ -61,7 +61,7 @@
             let barcodeInputs = ['P_Barcode1', 'P_Barcode2', 'P_Barcode3', 'P_Barcode4', 'P_Barcode5', 'P_Barcode6', 'P_Barcode7'];
             let currentIndex = 0;
             let barcodeInput = '';
-            const SPECIAL_BARCODE = 'Brake';
+            const SPECIAL_BARCODE = 'Admin';
 
             // Hide all product barcode input fields and their labels initially
             barcodeInputs.forEach(id => {
