kauf auf admin gesetzt

--- a/Programm/templates/add_buy.html
+++ b/Programm/templates/add_buy.html
@@ -34,7 +34,7 @@
     <main>
         <div>
             <h1>Kauf hinzufügen</h1>
-            <p>Scanne den speziellen Barcode "Brake", um den Kauf abzuschließen.</p>
+            <p>Scanne den speziellen Barcode "Admin", um den Kauf abzuschließen.</p>
             <form id="buyForm" action="/add_buy" method="post">
                 <label for="TN_Barcode" class="participantBarcodeLabel">Teilnehmerbarcode:</label>
                 <input id="TN_Barcode" name="TN_Barcode" class="participantBarcodeInput" autofocus autocomplete="off" inputmode="none" autocorrect="off" spellcheck="false">
