--- a/Programm/templates/back.html
+++ b/Programm/templates/back.html
@@ -23,7 +23,7 @@
         <h2>Spielzeug zurückgeben</h2>
         <form action="/return_spielzeug" method="POST">
             <label for="TN_Barcode">Teilnehmer Barcode:</label>
-            <input type="text" id="TN_Barcode" name="TN_Barcode" required><br><br>
+            <input type="text" id="TN_Barcode" name="TN_Barcode" required autofocus><br><br>
             <label for="Spielzeug">Spielzeug Barcode:</label>
             <input type="text" id="Spielzeug" name="Spielzeug" required><br><br>
             <input type="submit" value="Spielzeug zurückgeben">
