--- a/Programm/templates/login.html
+++ b/Programm/templates/login.html
@@ -16,7 +16,7 @@
     </header>
     <form method="post">
         <label for="password">Passwort:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" required autofocus>
         <button class="bt" type="submit">Einloggen</button>
     </form>
 </body>
