--- a/Programm/templates/watch.html
+++ b/Programm/templates/watch.html
@@ -128,7 +128,7 @@
                 <li><a href="/">Startseite</a></li>
                 <li><a href="/add_buy">Kauf hinzufügen</a></li>
                 <li><a href="/backup">Backup</a></li>
-
+                <li><a href="#" onclick="history.back();">Zurück</a></li>
             </ul>
         </nav>
     </header>
