--- a/Programm/templates/edit_spielzeug.html
+++ b/Programm/templates/edit_spielzeug.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/static/styles.css">
 </head>
+
 <body>
     <header>
         <h1 class="topic">Spielzeug bearbeiten</h1>
@@ -18,26 +20,28 @@
             </ul>
         </nav>
     </header>
-    <div class="form-container">
-        <form action="/edit_spielzeug" method="POST">
-            <label for="selected_spielzeug">Spielzeug auswählen:</label>
-            <select id="selected_spielzeug" name="selected_spielzeug">
-                {% for spielzeug in spielzeuge %}
+    <main>
+        <div class="form-container">
+            <form action="/edit_spielzeug" method="POST">
+                <label for="selected_spielzeug">Spielzeug auswählen:</label>
+                <select id="selected_spielzeug" name="selected_spielzeug">
+                    {% for spielzeug in spielzeuge %}
                     <option value="{{ spielzeug['Name'] }}">{{ spielzeug['Name'] }}</option>
-                {% endfor %}
-            </select><br><br>
-            <label for="action">Aktion auswählen:</label>
-            <select id="action" name="action">
-                <option value="update">Aktualisieren</option>
-                <option value="delete">Löschen</option>
-            </select><br><br>
-            <label for="new_name">Neuer Name:</label>
-            <input type="text" id="new_name" name="new_name"><br><br>
-            <label for="new_barcode">Neuer Barcode:</label>
-            <input type="text" id="new_barcode" name="new_barcode"><br><br>
-            <input type="submit" value="Bestätigen">
-        </form>
-    </div>
-    
+                    {% endfor %}
+                </select><br><br>
+                <label for="action">Aktion auswählen:</label>
+                <select id="action" name="action">
+                    <option value="update">Aktualisieren</option>
+                    <option value="delete">Löschen</option>
+                </select><br><br>
+                <label for="new_name">Neuer Name:</label>
+                <input type="text" id="new_name" name="new_name"><br><br>
+                <label for="new_barcode">Neuer Barcode:</label>
+                <input type="text" id="new_barcode" name="new_barcode"><br><br>
+                <input type="submit" value="Bestätigen">
+            </form>
+        </div>
+    </main>
 </body>
+
 </html>
