borrow system fixed

--- a/Programm/templates/A_Statistik.html
+++ b/Programm/templates/A_Statistik.html
@@ -27,6 +27,7 @@
         <a href="/kaufstatistik" class="admin-link">Kaufstatistik</a>
         <a href="/geld_aufteilen" class="admin-link">Geldaufteilung</a>
         <a href="/watch" class="admin-link">Übersicht</a>
+        <a href="/borrow_stats" class="admin-link">Spielzeugstats</a>
     </div>
 </body>
 
