--- a/Programm/templates/A_spielzeug.html
+++ b/Programm/templates/A_spielzeug.html
@@ -24,8 +24,8 @@
     </header>
     <div class="admin-content">
         <h2>Produkteinstellungen</h2>
-        <a href="/add_spielzeug" class="admin-link">Produkt hinzufügen</a>
-        <a href="/edit_spielzeug" class="admin-link">Produkt bearbeiten</a>
+        <a href="/add_spielzeug" class="admin-link">Spielzeug hinzufügen</a>
+        <a href="/edit_spielzeug" class="admin-link">Spielzeug bearbeiten</a>
         <a href="/ausgeliehen" class="admin-link">Ausgeliehen</a>
     </div>
 </body>
