--- a/Programm/templates/add_spielzeug.html
+++ b/Programm/templates/add_spielzeug.html
@@ -24,7 +24,7 @@
         <div class="form-container">
             <form action="/add_spielzeug" method="POST">
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required><br><br>
+                <input type="text" id="name" name="name" required autofocus><br><br>
                 <label for="barcode">Barcode:</label>
                 <input type="text" id="barcode" name="barcode" required><br><br>
                 <input type="submit" value="Hinzufügen">
