--- a/Programm/templates/edit_spielzeug.html
+++ b/Programm/templates/edit_spielzeug.html
@@ -47,7 +47,7 @@
                 <input type="text" id="new_name" name="new_name"><br><br>
                 <label for="new_barcode">Neuer Barcode:</label>
                 <input type="text" id="new_barcode" name="new_barcode"><br><br>
-                <input type="submit" value="Bestätigen">
+                <input class="bt" type="submit" value="Bestätigen">
             </form>
         </div>
     </main>
