--- a/Programm/templates/delete_database.html
+++ b/Programm/templates/delete_database.html
@@ -18,18 +18,19 @@
                         <li><a href="/add_user">Nutzer hinzufügen</a></li>
                         <li><a href="/watch">Auswertung</a></li>
                         <li><a href="#" onclick="history.back();">Zurück</a>
-                        <li>
                     </ul>
                 </nav>
     </header>
-    <div>
-        <h1>Datenbank auswählen</h1>
-        <form method="post">
-            <label for="password">Passwort:</label>
-            <input type="password" id="password" name="password" required><br>
-            <button type="submit">Löschen</button>
-        </form>
-    </div>
+    <main>
+        <div>
+            <h1>Datenbank auswählen</h1>
+            <form method="post">
+                <label for="password">Passwort:</label>
+                <input type="password" id="password" name="password" required><br>
+                <button class="bt" type="submit">Löschen</button>
+            </form>
+        </div>
+    </main>
 </body>
 
 </html>
