--- a/Programm/templates/edit_user.html
+++ b/Programm/templates/edit_user.html
@@ -1,5 +1,3 @@
-<!--Filename = edit_user.html-->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -36,14 +34,20 @@
                     <option value="{{ user }}">{{ user }}</option>
                     {% endfor %}
                 </select><br>
-                <label for="new_name">Neuer Teilnehmername:</label>
-                <input type="text" id="new_name" name="new_name" placeholder="Neuer Teilnehmername"><br>
-                <label for="new_barcode">Neuer Teilnehmerbarcode:</label>
-                <input type="text" id="new_barcode" name="new_barcode" placeholder="Neuer Teilnehmerbarcode"><br>
+                
+                <div id="update_name_section">
+                    <label for="new_name">Neuer Teilnehmername:</label>
+                    <input type="text" id="new_name" name="new_name" placeholder="Neuer Teilnehmername"><br>
+                </div>
+                
+                <div id="update_barcode_section">
+                    <label for="new_barcode">Neuer Teilnehmerbarcode:</label>
+                    <input type="text" id="new_barcode" name="new_barcode" placeholder="Neuer Teilnehmerbarcode"><br>
+                </div>
+                
                 <button class="bt" type="submit" name="action" value="update">Aktualisiere Name</button>
                 <button class="bt" type="submit" name="action" value="update_b">Aktualisiere Barcode</button>
-                <button class="bt" type="submit" name="action" value="delete" onclick="return confirmDelete();">Benutzer
-                    löschen</button>
+                <button class="bt" type="submit" name="action" value="delete" onclick="return confirmDelete();">Benutzer löschen</button>
             </form>
         </div>
     </main>
