--- a/Programm/static/styles.css
+++ b/Programm/static/styles.css
@@ -28,7 +28,7 @@ header {
     width: 100%;
     text-align: center;
     padding: 20px 0;
-    background-color: #333;
+    background-color: #60605d;
     color: #fdfbfb;
 }
 
@@ -51,7 +51,7 @@ nav ul li:last-child {
 nav ul li a {
     text-decoration: none;
     padding: 10px 20px;
-    background-color: #ff004d;
+    background-color: #e40038;
     color: var(--link-color);
     border: none;
     border-radius: 5px;
@@ -82,7 +82,7 @@ a {
 
 button {
     padding: 10px 20px;
-    background-color: #ff004d;
+    background-color: #e40038;
     color: var(--link-color);
     border: none;
     border-radius: 5px;
@@ -92,7 +92,7 @@ button {
 }
 
 button:hover {
-    background-color: #ff1a66;
+    background-color: #e40038;
 }
 
 form,
@@ -176,14 +176,14 @@ input[type="password"]:focus {
 input[type="submit"],
 .admin-link,
 .highlight {
-    background-color: #ff004d;
+    background-color: #e40038;
     color: var(--link-color);
 }
 
 input[type="submit"]:hover,
 .admin-link:hover,
 .highlight:hover {
-    background-color: #ff1a66;
+    background-color: #e40038;
 }
 
 .admin-link {
@@ -198,7 +198,7 @@ input[type="submit"]:hover,
 
 .bt {
     padding: 10px 20px;
-    background-color: #ff004d;
+    background-color: #e40038;
     color: var(--link-color);
     border: none;
     border-radius: 5px;
@@ -210,7 +210,7 @@ input[type="submit"]:hover,
 }
 
 .bt:hover {
-    background-color: #f33f7b;
+    background-color: #e40038;
 }
 
 /* Center the forms and ensure they do not overflow the container */
