--- a/Programm/templates/add_buy.html
+++ b/Programm/templates/add_buy.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kauf hinzufügen</title>
     <link rel="stylesheet" href="/static/styles.css">
+    <script src="/static/js/flash.js"></script>
 </head>
 <style type="text/css">
     .productBarcodeInput {
@@ -55,11 +56,6 @@
                 <input id="P_Barcode7" name="P_Barcode7" class="productBarcodeInput" style="display:none;" autocomplete="off" inputmode="none" autocorrect="off" spellcheck="false">
                 <input type="submit" value="Kauf hinzufügen">
             </form>
-            {% for category, message in get_flashed_messages(with_categories=True) %}
-                <div class="alert alert-{{ category }}">
-                    {{ message }}
-                </div>
-            {% endfor %}
         </div>
     </main>
     <script>
@@ -115,6 +111,13 @@
                 }
             });
         });
+    </script>
+    <script>
+        // Get flash messages from the server-side template
+        const flashMessages = {{ get_flashed_messages() | tojson }};
+
+        // Call the function from the external JavaScript file
+        displayFlashMessages(flashMessages);
     </script>
 </body>
 </html>
