--- a/Programm/templates/edit_user.html
+++ b/Programm/templates/edit_user.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nutzer bearbeiten</title>
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
+    <script src="/static/js/flash.js"></script>
     <script>
         function confirmDelete() {
             return confirm('Sind Sie sicher, dass Sie diesen Benutzer löschen möchten?');
@@ -51,6 +52,13 @@
             </form>
         </div>
     </main>
+    <script>
+        // Get flash messages from the server-side template
+        const flashMessages = {{ get_flashed_messages() | tojson }};
+
+        // Call the function from the external JavaScript file
+        displayFlashMessages(flashMessages);
+    </script>
 </body>
 
 </html>
